fix: widndow elements spacing

--- a/.config/my_eww/eww.scss
+++ b/.config/my_eww/eww.scss
@@ -131,8 +131,18 @@
   background-color: rgba(9, 9, 14, 0.95);
   border: 1px solid rgba(205, 214, 244, 0.2);
   border-radius: 10px;
-  padding: 15px;
+  padding: 12px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+}
+
+.volume-percent {
+  font-size: 13px;
+  color: #cdd6f4;
+  margin-bottom: 5px;
+}
+
+.volume-popup > box > box:first-child {
+  margin-bottom: 0;
 }
 
 .volume-popup-icon {
@@ -148,6 +158,7 @@
 
 .volume-slider {
   min-width: 200px;
+  margin-bottom: 10px;
 }
 
 .volume-slider trough {
@@ -158,13 +169,13 @@
 
 .volume-slider highlight {
   background-color: #89b4fa;
-  border-radius: 4px;
+  border-radius: 10px;
 }
 
 .volume-slider slider {
   min-width: 16px;
   min-height: 16px;
-  border-radius: 50%;
+  border-radius: 30%;
   background-color: #cdd6f4;
 }
 
@@ -177,4 +188,61 @@
 
 .volume-mute-btn:hover {
   background-color: rgba(137, 180, 250, 0.4);
+}
+
+// Список аудио устройств
+.audio-devices-section {
+  padding-top: 8px;
+  border-top: 1px solid rgba(205, 214, 244, 0.2);
+}
+
+.audio-devices-title {
+  font-size: 11px;
+  font-weight: bold;
+  color: #89b4fa;
+  margin-bottom: 3px;
+}
+
+.audio-sink {
+  padding: 5px 6px;
+  border-radius: 5px;
+  background-color: rgba(205, 214, 244, 0.05);
+  color: #cdd6f4;
+  transition: background-color 0.2s;
+}
+
+.audio-sink:hover {
+  background-color: rgba(205, 214, 244, 0.15);
+}
+
+.audio-sink-active {
+  padding: 5px 6px;
+  border-radius: 5px;
+  background-color: rgba(137, 180, 250, 0.3);
+  color: #89b4fa;
+}
+
+.audio-sink box,
+.audio-sink-active box {
+  min-height: 0;
+  padding: 0;
+  margin: 0 5;
+}
+
+.audio-sink label,
+.audio-sink-active label {
+  padding: 0;
+  margin: 0;
+}
+
+.audio-sink-icon {
+  font-size: 14px;
+  margin-right: 10px;
+  padding: 0;
+}
+
+.audio-sink-text {
+  font-size: 11px;
+  padding: 0;
+  margin: 0;
 }
